--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - PropertyDesk</title>
+    <title>Privacy Policy - PropDesk</title>
     <style>
         * {
             margin: 0;
@@ -116,12 +116,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy for PropertyDesk</h1>
+        <h1>Privacy Policy for PropDesk</h1>
         <p class="last-updated"><strong>Last Updated:</strong> December 12, 2025</p>
 
         <h2>Introduction</h2>
-        <p>PropertyDesk ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our Property Management mobile application ("App" or "Service").</p>
-        <p>By accessing or using PropertyDesk, you agree to the collection and use of information in accordance with this policy. If you do not agree with our policies and practices, do not use our Service.</p>
+        <p>PropDesk ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our Property Management mobile application ("App" or "Service").</p>
+        <p>By accessing or using PropDesk, you agree to the collection and use of information in accordance with this policy. If you do not agree with our policies and practices, do not use our Service.</p>
 
         <h2>Information We Collect</h2>
         
@@ -341,7 +341,7 @@
 
         <div class="legal-notice">
             <h2>Indemnification</h2>
-            <p>You agree to indemnify, defend, and hold harmless PropertyDesk, its developers, affiliates, and service providers from and against any claims, liabilities, damages, losses, costs, or expenses (including reasonable attorneys' fees) arising from:</p>
+            <p>You agree to indemnify, defend, and hold harmless PropDesk, its developers, affiliates, and service providers from and against any claims, liabilities, damages, losses, costs, or expenses (including reasonable attorneys' fees) arising from:</p>
             <ul>
                 <li>Your use of the Service</li>
                 <li>Your violation of this Privacy Policy or Terms of Service</li>
@@ -378,21 +378,21 @@
         <p>If any provision of this Privacy Policy is found to be unenforceable or invalid, that provision shall be limited or eliminated to the minimum extent necessary, and the remaining provisions shall remain in full force and effect.</p>
 
         <h2>Entire Agreement</h2>
-        <p>This Privacy Policy, together with our Terms of Service, constitutes the entire agreement between you and PropertyDesk regarding the collection and use of your information.</p>
+        <p>This Privacy Policy, together with our Terms of Service, constitutes the entire agreement between you and PropDesk regarding the collection and use of your information.</p>
 
         <div class="contact-info">
             <h2>Contact Us</h2>
             <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact:</p>
             <ul>
                 <li><strong>Email</strong>: mehrshadghasemi77@gmail.com</li>
-                <li><strong>Company</strong>: PropertyDesk</li>
+                <li><strong>Company</strong>: PropDesk</li>
                 <li><strong>Subject Line</strong>: "Privacy Policy Inquiry"</li>
             </ul>
             <p>We will respond to your inquiry within 30 days.</p>
         </div>
 
         <div class="footer">
-            <p><strong>By using PropertyDesk, you acknowledge that you have read, understood, and agree to be bound by this Privacy Policy. If you do not agree, please discontinue use of the Service immediately.</strong></p>
+            <p><strong>By using PropDesk, you acknowledge that you have read, understood, and agree to be bound by this Privacy Policy. If you do not agree, please discontinue use of the Service immediately.</strong></p>
             <p style="margin-top: 15px; font-size: 12px;">Last Updated: December 12, 2025 • Effective Date: December 12, 2025</p>
         </div>
     </div>
