--- a/index.html
+++ b/index.html
@@ -391,6 +391,121 @@
             <p>We will respond to your inquiry within 30 days.</p>
         </div>
 
+        <div style="margin-top: 60px; padding-top: 40px; border-top: 3px solid #e0e0e0;">
+            <h1 id="support" style="color: #667eea; margin-bottom: 20px; font-size: 36px; font-weight: 700;">Support - PropDesk</h1>
+            <p style="color: #666; margin-bottom: 30px;">Property Management Made Simple</p>
+
+            <div class="info-box" style="background: #e7f3ff; border-left: 4px solid #2196F3; padding: 20px; margin: 20px 0; border-radius: 4px;">
+                <p><strong>Welcome to PropDesk Support!</strong> We're here to help you with any questions or issues you may have with the app.</p>
+            </div>
+
+            <h2>Contact Support</h2>
+            <div class="contact-info">
+                <p><strong>Email Support:</strong></p>
+                <p><a href="mailto:mehrshadghasemi77@gmail.com">mehrshadghasemi77@gmail.com</a></p>
+                <p style="margin-top: 15px;">We typically respond within 24-48 hours.</p>
+                <p style="margin-top: 10px;">When contacting support, please include:</p>
+                <ul>
+                    <li>Your email address associated with your account</li>
+                    <li>A detailed description of your issue or question</li>
+                    <li>Screenshots (if applicable)</li>
+                    <li>Your device model and iOS version</li>
+                </ul>
+            </div>
+
+            <h2>Frequently Asked Questions</h2>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>How do I create an account?</h3>
+                <p>Open the PropDesk app and tap "Sign Up" on the welcome screen. Enter your name, email address, and create a secure password. You'll receive a verification code via email to complete the two-factor authentication setup.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>I'm not receiving the email verification code. What should I do?</h3>
+                <p>Please check your spam/junk folder. If you still don't receive the code, wait a few minutes and try again. Make sure you're using the correct email address. If the problem persists, contact support with your email address.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>How do I add a property?</h3>
+                <p>Navigate to the Properties tab, tap the "+" button, and fill in the property details including address, size, value, and description. Tap "Save" to add the property to your portfolio.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>How do I add tenants?</h3>
+                <p>Go to the Tenants tab, tap the "+" button, and enter the tenant's information including contact details, lease terms, and rent information. You can associate tenants with specific properties.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>How do I upload documents?</h3>
+                <p>Navigate to the Documents tab, tap the "+" button, select the document type (Property, Tenant, or General), choose a file from your device, and add any relevant notes. You can associate documents with specific properties or tenants.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>What are user roles and how do I manage them?</h3>
+                <p>User roles allow property owners to control access levels for team members. Only owners can manage roles. Available roles include: View Only (can view information), Edit (can view and edit), and Full (can view, edit, and delete). Navigate to Settings > User Management to assign roles.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>How does two-factor authentication (2FA) work?</h3>
+                <p>PropDesk requires two-factor authentication for all users. When you sign in, you'll receive a 6-digit verification code via email. Enter this code to complete the login process. This adds an extra layer of security to protect your account.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>I forgot my password. How do I reset it?</h3>
+                <p>On the sign-in screen, tap "Forgot Password" and enter your email address. You'll receive instructions to reset your password via email.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>How do I enable Face ID or Touch ID?</h3>
+                <p>After signing in with your credentials and 2FA, the app will prompt you to enable biometric authentication. You can also enable it later in Settings > Security. Biometric authentication allows quick access while maintaining security.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>What notifications does the app send?</h3>
+                <p>PropDesk sends automatic notifications for:</p>
+                <ul>
+                    <li>Upcoming lease expirations (30 days before expiration)</li>
+                    <li>Overdue rent payments</li>
+                </ul>
+                <p>You can manage notification preferences in Settings.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>Is my data secure?</h3>
+                <p>Yes. PropDesk uses industry-standard security measures including:</p>
+                <ul>
+                    <li>End-to-end encryption (HTTPS/TLS)</li>
+                    <li>Mandatory two-factor authentication</li>
+                    <li>Secure password hashing</li>
+                    <li>Automatic session timeout</li>
+                    <li>Regular security audits</li>
+                </ul>
+                <p>For more details, see our Privacy Policy above.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>Is PropDesk free to use?</h3>
+                <p>Yes, PropDesk is completely free to use. There are no subscriptions, in-app purchases, or paid features. All functionality is available to all users at no cost.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+                <h3>Can I use PropDesk on multiple devices?</h3>
+                <p>Yes, you can sign in to PropDesk on multiple iOS devices using the same account credentials. Your data will sync across all devices where you're signed in.</p>
+            </div>
+
+            <div style="margin-bottom: 25px; padding-bottom: 20px;">
+                <h3>How do I delete my account?</h3>
+                <p>To delete your account and all associated data, please contact support at mehrshadghasemi77@gmail.com with your request. We will process your deletion request within 30 days.</p>
+            </div>
+
+            <h2>App Information</h2>
+            <ul>
+                <li><strong>App Name:</strong> PropDesk</li>
+                <li><strong>Version:</strong> 1.0.0</li>
+                <li><strong>Platform:</strong> iOS</li>
+            </ul>
+        </div>
+
         <div class="footer">
             <p><strong>By using PropDesk, you acknowledge that you have read, understood, and agree to be bound by this Privacy Policy. If you do not agree, please discontinue use of the Service immediately.</strong></p>
             <p style="margin-top: 15px; font-size: 12px;">Last Updated: December 12, 2025 • Effective Date: December 12, 2025</p>
